# skillts

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  main.rs
src/models/: schemas.rs
src/routers/: translate.rs
src/services/: cache.rs  mod.rs  parser.rs  translator.rs
