[package]
name = "skillts"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# HTTP client for OpenAI
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_neo = "0.11"

# Configuration
dotenvy = "0.15"

# Cryptography
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Regex for parsing
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
overflow-checks = false